# requests_debugger

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  tox.ini
src/requests_debugger/: __init__.py  debugger.py  har_creator.py  har_mixin.py  har_model.py  main.py  request_curl.py
tests/: __init__.py  test_har_model.py  test_requests_debugger.py
